2016-09-15 Jesse Thaler  <jthaler@jthaler.net>

	* EnergyCorrelator.cc/hh
	Renamed EnergyCorrelatorNormalized -> EnergyCorrelatorGeneralized
	Changed order of arguments for EnergyCorrelatorGeneralized
	* example_basic_usage.cc
	Changed EnergyCorrelatorNormalized -> EnergyCorrelatorGeneralized
	* README
	Updated for EnergyCorrelatorGeneralized

2016-09-15 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	1.2.0-rc1

2016-08-24 Jesse Thaler  <jthaler@jthaler.net>

        Minor comment fixes throughout.

	* EnergyCorrelator.cc/hh
	Put in _helper_correlator when defining overall normalization
	Removed angle error for result_all_angles() 
	*NEWS:
	Made this more readable.
	*README:
	Clarified some of the documentation.

2016-08-23 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	*NEWS:
	*AUTHORS:
	*COPYING:
	*README:
	*EnergyCorrelator.cc
	Added if statement that the ECF and ECFNs return exactly zero
 	if the number of particles is less than N of the ECF.
	*EnergyCorrelator.hh
	*example.cc	
	*example_basic_usage.cc
	Updated this example.

2016-08-21 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	*NEWS:
	*AUTHORS:
	*COPYING:
	*README:
	*EnergyCorrelator.cc
	Added Cseries. 
	*EnergyCorrelator.hh
	Added Cseries.
	*example.cc
	Added example of Cseries	
	*example_basic_usage.cc
	Simplified examples.

2016-08-17 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	*NEWS:
	*AUTHORS:
	Added placeholder for new reference
	*COPYING:
	Added placeholder for new reference
	*README:
	added information on different measures E_inv
	*EnergyCorrelator.cc
	Minor text edits + added comments
	*EnergyCorrelator.hh
	Minor text edits + added comments
	*example_basic_usage.cc
	added a simplified example file that shows the use of the
	different observables.


2016-06-23 Lina Necib  <lnecib@mit.edu>

	*VERSION:
	1.2.0-alpha0
	*NEWS:
	*AUTHORS:
	Lina Necib
	*COPYING:
	*README:
        added descriptions of functions that will appear shortly 
	arXiv:160X.XXXXX

	*EnergyCorrelator.cc
	added code to calculate normalized ECFS.